--- a/src/styles.css
+++ b/src/styles.css
@@ -2,16 +2,13 @@
   --blue100: #007aff;
   --blue200: #3182f6;
   --blue300: #2769d8;
-
   --gray100: #f2f4f6;
   --gray200: #e0e0e0;
   --gray300: #ddd;
   --gray400: #888;
   --gray500: #4e5968;
   --gray600: #333;
-
   --black100: #191f28;
-
   --background-dark: #212945;
   --background-light: #f9f9f9;
 }
@@ -31,11 +28,18 @@ a {
 
 /* 헤더 */
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white;
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 40px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--gray300);
 }
 
 .header__logo {
