--- a/src/styles.css
+++ b/src/styles.css
@@ -281,6 +281,23 @@ a {
   background-color: var(--gray200);
 }
 
+/* 푸터  */
+.footer {
+  padding: 20px 0;
+  text-align: center;
+  font-size: 14px;
+  color: var(--gray400);
+}
+
+.footer__links {
+  margin-bottom: 10px;
+}
+
+.footer__link {
+  text-decoration: none;
+  margin: 0 15px;
+}
+
 /* 상세 페이지  */
 .detail-main-content {
   padding: 20px;
