--- a/src/styles.css
+++ b/src/styles.css
@@ -105,7 +105,7 @@ a {
 .main__banner {
   width: 100%;
   height: 130px;
-  background-color: #212945;
+  background-color: var(--background-dark);
   display: flex;
   border-radius: 20px;
   justify-content: center;
